--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       "source": "/(.*)",
       "headers": [
         { "key": "X-Frame-Options", "value": "ALLOWALL" },
-        { "key": "Content-Security-Policy", "value": "frame-ancestors 'self' https://*.squarespace.com https://YOURDOMAIN.com" }
+        { "key": "Content-Security-Policy", "value": "frame-ancestors 'self' https://*.squarespace.com https://rule1120.com" }
       ]
     }
   ]
