--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/blob": "0.24.1",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@vercel/blob": "0.24.1"
+    "react-dom": "18.3.1"
   }
 }
